--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "changeset": "changeset",
     "checkTypes": "tsc -b --noEmit",
     "commit": "cz",
-    "dev": "pnpm run --filter template-vite-react-19 dev",
+    "dev": "pnpm run --filter demo dev",
     "lint": "run-p lint:*",
     "lint:cspell": "cspell --no-summary --no-progress",
     "lint:es": "eslint . --fix --report-unused-disable-directives --max-warnings 0",
@@ -22,9 +22,7 @@
   "dependencies": {
     "@repo/dts": "workspace:*",
     "@repo/tsconfig": "workspace:*",
-    "@repo/utils": "workspace:*",
     "@types/fs-extra": "catalog:",
-    "babel-plugin-react-compiler": "catalog:",
     "fs-extra": "catalog:",
     "vite": "catalog:"
   },
@@ -34,13 +32,9 @@
     "@commitlint/cli": "catalog:",
     "@commitlint/config-conventional": "catalog:",
     "@commitlint/types": "catalog:",
-    "@emotion/eslint-plugin": "catalog:",
-    "@eslint-react/eslint-plugin": "catalog:",
     "@eslint/compat": "catalog:",
-    "@tanstack/eslint-plugin-query": "catalog:",
     "@total-typescript/ts-reset": "catalog:",
     "@types/lint-staged": "catalog:",
-    "@vitejs/plugin-react": "catalog:",
     "@vp-tw/eslint-config": "catalog:",
     "@vp-tw/tsconfig": "catalog:",
     "commitizen": "catalog:",
@@ -48,16 +42,12 @@
     "eslint": "catalog:",
     "eslint-config-prettier": "catalog:",
     "eslint-plugin-package-json": "catalog:",
-    "eslint-plugin-react-compiler": "catalog:",
-    "eslint-plugin-react-hooks": "catalog:",
-    "eslint-plugin-react-refresh": "catalog:",
     "eslint-plugin-storybook": "catalog:",
     "fast-glob": "catalog:",
     "husky": "catalog:",
     "jiti": "catalog:",
     "lint-staged": "catalog:",
     "pathe": "catalog:",
-    "playwright": "catalog:",
     "postcss-styled-syntax": "catalog:",
     "prettier": "catalog:",
     "stylelint": "catalog:",
