--- a/packages/vite-plugin-version/tsconfig.lib.json
+++ b/packages/vite-plugin-version/tsconfig.lib.json
@@ -3,8 +3,8 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.lib.tsbuildinfo"
   },
   "extends": [
-    "@repo/tsconfig/tsconfig.app",
+    "@repo/tsconfig/tsconfig.node",
     "@vp-tw/tsconfig/ext/lib/tsconfig"
   ],
-  "include": ["./src/**/*"]
+  "include": ["./src"]
 }
