--- a/packages/vite-plugin-version/tsconfig.node.json
+++ b/packages/vite-plugin-version/tsconfig.node.json
@@ -3,5 +3,5 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo"
   },
   "extends": ["@repo/tsconfig/tsconfig.node"],
-  "include": ["*"]
+  "include": ["./*"]
 }
