--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,32 +4,18 @@ catalog:
   "@commitlint/cli": ^19.8.1
   "@commitlint/config-conventional": ^19.8.1
   "@commitlint/types": ^19.8.1
-  "@emotion/eslint-plugin": ^11.12.0
-  "@emotion/styled": ^11.14.0
   "@eslint/compat": ^1.3.0
-  "@eslint-react/eslint-plugin": ^1.52.2
-  "@fontsource/inter": ^5.2.5
-  "@mui/joy": ^5.0.0-beta.52
-  "@mui/utils": ^7.1.0
-  "@tanstack/eslint-plugin-query": ^5.78.0
   "@total-typescript/ts-reset": ^0.6.1
   "@types/fs-extra": ^11.0.4
   "@types/lint-staged": ^13.3.0
-  "@types/react": ^19.1.6
-  "@types/react-dom": ^19.1.5
-  "@vitejs/plugin-react": ^4.5.2
   "@vp-tw/eslint-config": ^0.1.5
   "@vp-tw/tsconfig": ^3.1.2
-  babel-plugin-react-compiler: ^19.1.0-rc.2
   commitizen: ^4.3.1
   cspell: ^9.1.1
   es-toolkit: ^1.38.0
   eslint: ^9.29.0
   eslint-config-prettier: ^10.1.5
   eslint-plugin-package-json: ^0.40.0
-  eslint-plugin-react-compiler: ^19.1.0-rc.2
-  eslint-plugin-react-hooks: ^5.2.0
-  eslint-plugin-react-refresh: ^0.4.20
   eslint-plugin-storybook: ^9.0.11
   fast-glob: ^3.3.3
   fs-extra: ^11.3.0
@@ -37,11 +23,9 @@ catalog:
   jiti: ^2.4.2
   lint-staged: ^16.1.2
   pathe: ^2.0.3
-  playwright: ^1.53.0
   postcss-styled-syntax: ^0.7.1
   prettier: ^3.5.3
-  react: ^19.1.0
-  react-dom: ^19.1.0
+  read-pkg: ^9.0.1
   stylelint: ^16.20.0
   stylelint-config-idiomatic-order: ^10.0.0
   stylelint-config-standard: ^38.0.0
@@ -49,10 +33,10 @@ catalog:
   tsdown: ^0.12.5
   tsx: ^4.20.3
   typescript: ^5.8.3
+  url-join: ^5.0.0
   vite: npm:rolldown-vite@^6.3.21
   vite-tsconfig-paths: ^5.1.4
   vitest: ^3.2.4
-  vitest-browser-react: ^0.2.0
 
 catalogMode: strict
 
