--- a/packages/vite-plugin-version/package.json
+++ b/packages/vite-plugin-version/package.json
@@ -2,6 +2,13 @@
   "name": "@crescendolab/vite-plugin-version",
   "version": "0.0.3",
   "description": "A Vite plugin to inject version information into the build",
+  "keywords": [
+    "vite",
+    "plugin",
+    "version",
+    "build",
+    "inject"
+  ],
   "homepage": "https://github.com/crescendolab-open/vite-plugin-version",
   "repository": {
     "type": "git",
