--- a/packages/vite-plugin-version/package.json
+++ b/packages/vite-plugin-version/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@crescendolab/vite-plugin-version",
   "version": "0.0.4",
-  "description": "A Vite plugin to inject version information into the build",
+  "description": "A Vite plugin that exposes build version information both as a static file and as a virtual import.",
   "keywords": [
     "vite",
     "plugin",
